--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -5,7 +5,7 @@
     <button
       class="list-group-item list-group-item-action"
       *ngFor="let tag of tagHistory"
-    >
+      (click)="searchAgain(tag)">
       {{ tag | titlecase }}
     </button>
   </div>
